# geoeco-news

TrendWatchAI/: pyproject.toml  replit.md  requirements.txt
TrendWatchAI/app/: __init__.py  main.py  models.py  news_alerts.db  scraper.py  whatsapp.py
TrendWatchAI/app/static/css/: design-system.css
TrendWatchAI/app/templates/: base.html  dashboard.html  index.html  login.html  pricing.html  settings.html  signup.html
TrendWatchAI/attached_assets/: Pasted--Objetivo-Criar-um-MVP-funcional-de-SaaS-que-monitora-not-cias-econ-micas-geopol-ticas-e-envia-ale-1758724554486_1758724554486.txt  Pasted--Prompt-para-P-gina-de-Pricing-Checkout-GeoEcoNews-Objetivo-Criar-p-gina-de-pricing-estrat-gica--1758728305346_1758728305347.txt  Pasted--Prompt-para-Redesign-UI-UX-GeoEcoNews-Objetivo-Transformar-o-GeoEcoNews-em-uma-interface-1758743272802_1758743272803.txt  Pasted-Prompt-para-Replit-Valida-o-de-N-mero-WhatsApp-Objetivo-Modificar-formul-rio-de-cadastro-para-cap-1758749432874_1758749432874.txt
