[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "bcrypt>=4.3.0",
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.117.1",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "stripe>=12.5.1",
    "uvicorn>=0.37.0",
]
